# Brainpower

./: .gitignore  README.md  URLs.md
CS/: README.md
CS/Algorithm/: README.md
CS/Algorithm/Divide-and-Conquer/: README.md
CS/Algorithm/DynamicProgramming/: README.md
CS/Algorithm/Graph/: README.md
CS/Algorithm/Greedy/: README.md
CS/Compiler/: README.md
CS/Compiler/ELF/: README.md
CS/DataStructure/: README.md
CS/DataStructure/Graph/: README.md
CS/DataStructure/Tree/: README.md
CS/DesignPatterns/: README.md
CS/DesignPatterns/AbstractFactoryPattern/: README.md
CS/DesignPatterns/AdapterPattern/: README.md
CS/DesignPatterns/BridgePattern/: README.md
CS/DesignPatterns/BuilderPattern/: README.md
CS/DesignPatterns/BusinessDelegatePattern/: README.md
CS/DesignPatterns/ChainOfResponsibilityPattern/: README.md
CS/DesignPatterns/CommandPattern/: README.md
CS/DesignPatterns/CompositeEntityPattern/: README.md
CS/DesignPatterns/CompositePattern/: README.md
CS/DesignPatterns/DataAccessObjectPattern/: README.md
CS/DesignPatterns/DecoratorPattern/: README.md
CS/DesignPatterns/FacadePattern/: README.md
CS/DesignPatterns/FilterPattern/: README.md
CS/DesignPatterns/FlyweightPattern/: README.md
CS/DesignPatterns/FrontControllerPattern/: README.md
CS/DesignPatterns/InterceptingFilterPattern/: README.md
CS/DesignPatterns/InterpreterPattern/: README.md
CS/DesignPatterns/IteratorPattern/: README.md
CS/DesignPatterns/MVCPattern/: README.md
CS/DesignPatterns/MediatorPattern/: README.md
CS/DesignPatterns/MementoPattern/: README.md
CS/DesignPatterns/NullObjectPattern/: README.md
CS/DesignPatterns/ObserverPattern/: README.md
CS/DesignPatterns/PrototypePattern/: README.md
CS/DesignPatterns/ProxyPattern/: README.md
CS/DesignPatterns/ServiceLocatorPattern/: README.md
CS/DesignPatterns/SimpleFactoryPattern/: README.md
CS/DesignPatterns/SingletonPattern/: README.md
CS/DesignPatterns/StatePattern/: README.md
CS/DesignPatterns/StrategyPattern/: README.md
CS/DesignPatterns/TemplatePattern/: README.md
CS/DesignPatterns/TransferObjectPattern/: README.md
CS/DesignPatterns/VisitorPattern/: README.md
CS/LanguageTricks/: EffectiveC++.md  README.md
CS/LanguageTricks/effectiveC++/: EffectiveC++.md  README.md
CV/: README.md
CV/FeatureDescription/: README.md
CV/GeometryTransform/: README.md
CV/Gram/: README.md
CV/Video/: README.md  rgb_yuv.md
Code/CS/DesignPatterns/: AbstractFactoryPattern.py  AdapterPattern.py  BridgePattern.py  BuilderPattern.py  BusinessDelegatePattern.py  ChainOfResponsibilityPattren.py  CommandPattern.py  CompositeEntityPattern.py  CompositePattern.py  DataAccessObjectPattern.py  DecoratorPattern.py  FacadePattern.py  FilterPattern.py  FlyweightPattern.py  FrontControllerPattern.py  InterceptingFilterPattern.py  InterpreterPattern.py  IteratorPattern.py  MediatorPattern.py  MementoPattern.py  ModelViewControllerPattern.py  NullObjectPattern.py  ObserverPattern.py  PrototypePattern.py  ProxyPattern.py  ServiceLocatorPattern.py  SimpleFactoryPattern.py  SingletonPattern.py  StatePattern.py  StrategyPattern.py  TemplatePattern.py  TransferObjectPattern.py  VisitorPattern.py
Code/CV/: imageCompare.py  rgb2yuv.py  sift.py
Code/DL/Audio/: mel.py
Code/DL/DDPM/: difussion_process.py  quickStart.py  train.py
Code/Graphics/GAMES101/: README.md
Code/ML/: DecisionTree.ipynb  LogisticRegression.ipynb  NaiveBayes.ipynb  Perceptron.ipynb  SVM.ipynb  k-NN.ipynb
Code/Math/: OrdinaryLeastSquares.ipynb
Code/Tools/CMake/: CMakeLists.txt  TutorialConfig.h.in
Code/Tools/CMake/MathFunctions/: CMakeLists.txt  mysqrt.cpp
Code/Tools/CMake/practice/t1/: CMakeLists.txt
Code/Tools/CMake/practice/t2/: CMakeLists.txt
Code/Tools/CMake/practice/t2/src/: main.c
Code/Tools/CMake/practice/t3/: CMakeLists.txt
Code/Tools/CMake/practice/t3/lib/: CMakeLists.txt  hello.c  hello.h
Code/Tools/CMake/practice/t4/: CMakeLists.txt
Code/Tools/CMake/practice/t4/src/: CMakeLists.txt  main.c
Code/Tools/CMake/tutorial/: License.txt  tutorial.cpp
Code/Tools/CMake/tutorial/MathFunctions/: mysqrt.cpp
Code/Tools/Elasticsearch/: quickstart.py
Code/Tools/Faiss/: quickStart.py
Code/Tools/FastAPI/: add_api_route.py  main.py  quickstart.py
Code/Tools/Flask/: hello.py  (+1 more)
Code/Tools/ffmpeg/examples/: CMakeLists.txt  README.md  h264_2_mp4.cpp  mp4_2_yuv420.cpp  rtsp_2_h264.cpp  yuv420_2_rtsp.cpp
Code/Tools/ncnn/: CMakeLists.txt  Detector.cpp
Code/Tools/pybind11/cmake_example/: CMakeLists.txt  readme.py
Code/Tools/pybind11/cmake_example/src/: main.cpp
Code/language/C++/tricks/google_test/unittest/: CMakeLists.txt  hello_main.cpp  hello_test2.cpp
Code/leetcode/: README.md
DL/: README.md
DL/Algorithm/: NMS.md  README.md
DL/Data/: README.md
DL/ModelCompression/: README.md
DL/ModelFace/: README.md
DL/ModelInspiration/: README.md
DL/ModelOperator/: README.md
IT/: README.md
IT/Docker/: Q&A.md  README.md
IT/Elastic/: README.md
IT/K8s/: README.md
IT/Kafka/: README.md
IT/Kubeflow/: README.md
IT/Kubevela/: README.md
IT/Rancher/: README.md
IT/Redis/: README.md
IT/Serverless/: README.md
IT/fission/: README.md
IT/k8s/: README.md
ML/: README.md
ML/DecisionTree/: README.md
ML/KalmanFilter/: README.md
ML/LogisticRegression/: README.md
ML/NaiveBayes/: README.md
ML/Perceptron/: README.md
ML/SVM/: README.md
ML/k-NN/: README.md
Math/: README.md
Math/ComplexNumber/: README.md
Math/Entory/: README.md
Math/Fourier/: README.md
Math/Taylor/: README.md
Math/Trigonometric/: README.md
Record/Dockerfile/: common_commands.md
Record/Markdown/: grammar.md
Record/Rancher/: Q&A.md
Tools/: README.md
Tools/ApacheBenchmark/: README.md
Tools/ElasticSearch/: README.md
Tools/FastAPI/: README.md
Tools/Flask/: README.md
Tools/GCC/: README.md
Tools/Gunicorn/: README.md
Tools/Locust/: README.md
Tools/Markdown/: README.md
Tools/Pytest/: README.md
Tools/Uvicorn/: README.md
Tools/gcc/: README.md
Tools/nose/: README.md
Tools/pytest/: README.md
Tools/tensorRT/: README.md
(+514 files in other folders)
